--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
-    "tsyringe": "^4.10.0",
-    "reflect-metadata": "^0.2.2"
+    "pg": "^8.16.3",
+    "reflect-metadata": "^0.2.2",
+    "tsyringe": "^4.10.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -21,6 +22,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.0",
+    "@types/pg": "^8.15.5",
     "dotenv": "^17.2.1",
     "eslint": "^9.34.0",
     "install": "^0.13.0",
