--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
   "rewrites": [
     {
       "source": "/api/:path*",
-      "destination": "https://your-backend-url.com/api/:path*"
+      "destination": "https://api.dashboardilgd.com/api/:path*"
     }
   ]
 }
