--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,15 @@
-
 {
   "version": 2,
   "builds": [
-    { "src": "build/server.js", "use": "@vercel/node" }
+    {
+      "src": "api/index.ts",
+      "use": "@vercel/node"
+    }
   ],
   "routes": [
-    { "src": "/(.*)", "dest": "build/server.js" }
+    {
+      "src": "/api/(.*)",
+      "dest": "api/index.ts"
+    }
   ]
 }
