--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "start": "node build/server.js",
     "dev": "ts-node-dev --files --transpile-only --respawn --inspect=4321 --project tsconfig.json src/server.ts",
     "lint": "eslint 'src/**/*.ts'",
-    "test": "jest"
+    "test": "jest",
+    "sync:earnings": "ts-node src/tasks/syncUnlockEarnings.ts"
   },
   "dependencies": {
     "@vercel/node": "^5.3.15",
