--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "ts-node-dev --files --transpile-only --respawn --inspect=4321 --project tsconfig.json src/server.ts",
     "lint": "eslint 'src/**/*.ts'",
     "test": "jest",
-    "sync:earnings": "ts-node src/tasks/syncUnlockEarnings.ts"
+    "sync:earnings": "ts-node src/tasks/syncUnlockEarnings.ts",
+    "sync:transactions": "ts-node src/tasks/syncTransactionEarnings.ts"
   },
   "dependencies": {
     "@vercel/node": "^5.3.15",
