--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "lint": "eslint 'src/**/*.ts'",
     "test": "jest",
     "sync:earnings": "ts-node src/tasks/syncUnlockEarnings.ts",
-    "sync:transactions": "ts-node src/tasks/syncTransactionEarnings.ts"
+    "sync:transactions": "ts-node src/tasks/syncTransactionEarnings.ts",
+    "docs": "jsdoc -c jsdoc.json"
   },
   "dependencies": {
     "@vercel/node": "^5.3.15",
@@ -34,6 +35,7 @@
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "jsdoc": "^4.0.2"
   }
 }
