--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@vercel/node": "^5.3.15",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
@@ -30,12 +32,12 @@
     "dotenv": "^17.2.1",
     "eslint": "^9.34.0",
     "install": "^0.13.0",
+    "jsdoc": "^4.0.2",
     "nodemon": "^3.1.10",
     "npm": "^11.5.2",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.2",
-    "jsdoc": "^4.0.2"
+    "typescript": "^5.9.2"
   }
 }
