--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "dotenv": "^17.2.1",
     "eslint": "^9.34.0",
     "install": "^0.13.0",
+    "jest": "^29.7.0",
     "jsdoc": "^4.0.2",
     "nodemon": "^3.1.10",
     "npm": "^11.5.2",
     "prettier": "^3.6.2",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
