--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vercel/node": "^5.3.15",
     "bcrypt": "^6.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
